# birdbird

./: .gitignore  .htmlvalidate.json  .pre-commit-config.yaml  BIRD_CAMERAS.md  CLAUDE.md  PROJECT-HISTORY.md  README.md  TODO.md  cspell.json  eslint.config.js  pa11y.json  package.json  preview_viewer.py  pyproject.toml  review_person_detections.py  stylelint.config.js  update_metadata.py
.claude/skills/: plan.md
.github/workflows/: tests.yml
src/birdbird/: __init__.py  best_clips.py  cli.py  config.py  detector.py  filter.py  frames.py  highlights.py  paths.py  publish.py  songs.py  species.py
src/birdbird/data/: uk_garden_birds.txt
src/birdbird/templates/: accessibility.html  config.js  credits.html  index.html  method.html  styles.css  viewer.html
tests/: __init__.py  conftest.py  test_best_clips.py  test_config.py  test_detector.py  test_filter_mock.py  test_frames_mock.py  test_highlights_mock.py  test_paths.py  test_publish.py  test_publish_mock.py  test_songs.py  test_songs_mock.py  test_species_mock.py
utilities/: README.md  remove_batch.py  update_metadata.py
ux-reviews/20260128/: PROPOSALS_HIGH.md  PROPOSALS_LOW.md  PROPOSALS_MEDIUM.md
ux-reviews/20290128/: PROPOSALS_HIGH.md  PROPOSALS_LOW.md  PROPOSALS_MEDIUM.md  chatgpt.txt  claude_opus_4_5_app.txt  gemini_3_thinking.txt  prompt.txt
