[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birdbird"
version = "0.1.0"
description = "Bird feeder video analysis pipeline"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "typer>=0.9.0",
    "tqdm>=4.66.0",
    "boto3>=1.42.0",
    "birdnet-analyzer>=2.4.0",
]

[project.scripts]
birdbird = "birdbird.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/birdbird"]
