[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birdbird"
version = "0.1.0"
description = "Bird feeder video analysis pipeline"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "typer>=0.9.0",
    "tqdm>=4.66.0",
    "boto3>=1.42.0",
    "birdnet-analyzer>=2.4.0",
    # pillow: min version pinned to avoid CVE-2026-25990 (transitive dep via ultralytics et al.)
    "pillow>=12.1.1",
]

[project.scripts]
birdbird = "birdbird.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
    "mypy>=1.13",
    "types-tqdm",
    "boto3-stubs[essential]",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
gpu = [
    "torch>=2.0.0",
    "bioclip>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/birdbird"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

# Start lenient, enable later:
# disallow_untyped_defs = true
# strict = true

# Ignore third-party packages without type stubs
[[tool.mypy.overrides]]
module = [
    "birdnet.*",
    "birdnet_analyzer",
    "birdnet_analyzer.*",
    "ultralytics.*",
    "bioclip",
    "bioclip.*",
    "torch",
    "torch.*",
]
ignore_missing_imports = true

[tool.bandit]
# B404: import subprocess - unavoidable for CLI tool
# B603: subprocess without shell - we use list args (the safe pattern)
# B607: partial executable path - we call ffmpeg/ssh by name
skips = ["B404", "B603", "B607"]
